--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _major=5.2
 _srcname=linux-stable-rc
-pkgver=5.2.8.r252.g0953e780f37b
+pkgver=5.2.9.r108.gd3ad3ee990bc
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
