--- a/stable/linux-aufs-git/config
+++ b/stable/linux-aufs-git/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.2.5-arch1 Kernel Configuration
+# Linux/x86 5.2.9-arch1 Kernel Configuration
 #
 
 #
@@ -357,6 +357,8 @@ CONFIG_JAILHOUSE_GUEST=y
 # CONFIG_MNEHALEM is not set
 # CONFIG_MWESTMERE is not set
 # CONFIG_MSILVERMONT is not set
+# CONFIG_MGOLDMONT is not set
+# CONFIG_MGOLDMONTPLUS is not set
 # CONFIG_MSANDYBRIDGE is not set
 # CONFIG_MIVYBRIDGE is not set
 # CONFIG_MHASWELL is not set
@@ -365,6 +367,7 @@ CONFIG_JAILHOUSE_GUEST=y
 # CONFIG_MSKYLAKEX is not set
 # CONFIG_MCANNONLAKE is not set
 # CONFIG_MICELAKE is not set
+# CONFIG_MCASCADELAKE is not set
 CONFIG_GENERIC_CPU=y
 # CONFIG_MNATIVE is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
