--- a/stable/linux-aufs-git/PKGBUILD
+++ b/stable/linux-aufs-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.3
 _srcname=linux
-pkgver=5.3.4.r0.ged56826f1779
-pkgrel=1
+pkgver=5.3.5.r0.gdc073f193b70
+pkgrel=2
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
 license=('GPL2')
@@ -280,9 +280,6 @@ _package-headers() {
 
   # add xfs and shmem for aufs building
   mkdir -p "$builddir"/{fs/xfs,mm}
-
-  # ???
-  mkdir "$builddir/.tmp_versions"
 
   msg2 "Installing headers..."
   cp -t "$builddir" -a include
