--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _major=5.3
 _srcname=linux-stable-rc
-pkgver=5.3.4.r162.gde3c43ffab53
-pkgrel=1
+pkgver=5.3.4.r167.ga2703e78c28a
+pkgrel=2
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
 license=('GPL2')
@@ -284,9 +284,6 @@ _package-headers() {
 
   # add xfs and shmem for bfq building
   mkdir -p "$builddir"/{fs/xfs,mm}
-
-  # ???
-  mkdir "$builddir/.tmp_versions"
 
   msg2 "Installing headers..."
   cp -t "$builddir" -a include
