--- a/stable/linux-bfq-git/PKGBUILD
+++ b/stable/linux-bfq-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-git
 _major=5.3
 _srcname=linux
 pkgver=5.3.8.r0.gdb0655e705be
-pkgrel=5
+pkgrel=6
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
 license=('GPL2')
@@ -79,7 +79,7 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=l
 
 export KBUILD_BUILD_HOST=archlinux
 export KBUILD_BUILD_USER=$pkgbase
-export KBUILD_BUILD_TIMESTAMP="@${SOURCE_DATE_EPOCH:-$(date +%s)}"
+export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
 
 pkgver() {
   cd $_srcname
