--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.3
 _srcname=linux-stable-rc
-pkgver=5.3.8.r160.gff21af282725
+pkgver=5.3.8.r164.g75c9913bbf6e
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -75,7 +75,7 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
 
 export KBUILD_BUILD_HOST=archlinux
 export KBUILD_BUILD_USER=$pkgbase
-export KBUILD_BUILD_TIMESTAMP="@${SOURCE_DATE_EPOCH:-$(date +%s)}"
+export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
 
 pkgver() {
   cd $_srcname
