--- a/stable-rc/linux-aufs-git/PKGBUILD
+++ b/stable-rc/linux-aufs-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.5
 _srcname=linux-stable-rc
-pkgver=5.5.4.r0.g3f29db9524f0Wyb
+pkgver=5.5.4.r0.g3f29db9524f0
 pkgrel=2
 pkgdesc='Linux AUFS'
 arch=('x86_64')
