--- a/stable-rc/linux-bfq-git/PKGBUILD
+++ b/stable-rc/linux-bfq-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-bfq-git
 # pkgname=('linux-bfq-git' 'linux-bfq-git-headers' 'linux-bfq-git-docs')
 _major=5.5
 _srcname=linux-stable-rc
-pkgver=5.5.4.r0.g3f29db9524f0Wyb
+pkgver=5.5.4.r0.g3f29db9524f0
 pkgrel=2
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
